[project]
name = "commitr"
version = "0.1.0"
description = "AI-generated git commit messages that learn your project's style"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.86.0",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
commitr = "commitr:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
