[project]
name = "commitr"
version = "0.2.1"
description = "AI-generated git commit messages that learn your project's style"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Furinelle" }]
keywords = [
    "git",
    "commit",
    "commit-message",
    "ai",
    "llm",
    "cli",
    "conventional-commits",
    "deepseek",
    "openai",
    "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "litellm>=1.86.0",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.urls]
Homepage = "https://github.com/Furinelle/commitr"
Repository = "https://github.com/Furinelle/commitr"
Issues = "https://github.com/Furinelle/commitr/issues"
Changelog = "https://github.com/Furinelle/commitr/blob/master/CHANGELOG.md"

[project.scripts]
commitr = "commitr:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
